[package]
name = "minato"
version = "0.1.0"
authors = ["Dummmm <niros98@gmail.com>"]
edition = "2018"

[dependencies]
log = "0.4.8"
clap = "2.33.0"
env_logger = "0.7.1"

nix = "0.11.0"
reqwest = { version = "0.10.4", features = ["blocking", "json"] }
serde = "1.0"
serde_json = "1.0"
tar = "0.4"
flate2 = "1.0"
rand = "0.6"
dirs = "2.0"

